Update new version for pitayaa , Redeem Point , Stop & report !
Update new version for pitayaa , Redeem Point , Stop & report !